updated mural screenshot. fixed some of the layout issues

--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ ul {
 }
 
 .skills-list {
-    padding-top: 60px;
+    padding-top: 20px;
     padding-bottom: 20px;
 }
 
